--- a/route-tracker-api/appsettings.json
+++ b/route-tracker-api/appsettings.json
@@ -1,10 +1,10 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://qualified.domain.name.b2clogin.com/",
-    "ClientId": "11111111-1111-1111-11111111111111111",
-    "Domain": "qualified.domain.name",
-    "Scopes": "access_as_user",
-    "SignUpSignInPolicyId": "b2c_1_susi"
+    "Instance": "https://routetracker.b2clogin.com",
+    "Domain": "routetracker.onmicrosoft.com",
+    "ClientId": "51ef2166-4282-490d-b1ad-f04ab06fec7a",
+    "SignedOutCallbackPath": "/signout/B2C_1_susi",
+    "SignUpSignInPolicyId": "B2C_1_susi"
   },
   "Logging": {
     "LogLevel": {
