--- a/route-tracker-api-tests/route-tracker-api-tests.csproj
+++ b/route-tracker-api-tests/route-tracker-api-tests.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\route-tracker-api\route-tracker-api.csproj" />
+  </ItemGroup>
+
 </Project>
