--- a/route-tracker-spa/package.json
+++ b/route-tracker-spa/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-daisyui": "^3.0.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "theme-change": "^2.3.0"
   },
