--- a/route-tracker-spa/package.json
+++ b/route-tracker-spa/package.json
@@ -12,11 +12,14 @@
     "@azure/msal-browser": "^2.33.0",
     "@azure/msal-react": "^1.5.3",
     "daisyui": "^2.50.1",
+    "date-fns": "^2.29.3",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
+    "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-daisyui": "^3.0.2",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
