--- a/route-tracker-spa/package.json
+++ b/route-tracker-spa/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@azure/msal-browser": "^2.33.0",
@@ -27,12 +28,16 @@
     "theme-change": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.4.3",
     "jest": "^29.4.3",
     "postcss": "^8.4.21",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.6",
     "vite": "^4.1.0"
   }
