--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -13,16 +13,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+            run:
+              echo "Checkout code"
 
       - name: Login to Heroku
-        uses: actions/heroku@v3
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          email: ${{ secrets.HEROKU_EMAIL }}
-          api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: your-heroku-app-name
+          run:
+            echo "Login to Heroku"
 
       - name: Deploy Docker Compose to Heroku
         run: |
-          heroku container:login
           docker-compose -f ${{ github.event.inputs.compose-file }} build
-          heroku container:push web
-          heroku container:release web
+          docker-compose -f ${{ github.event.inputs.compose-file }} push
+          echo "Deploy Docker Compose to Heroku"
