--- a/.github/workflows/api-heroku-deploy.yml
+++ b/.github/workflows/api-heroku-deploy.yml
@@ -9,22 +9,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Login to Heroku Container Registry
-      uses: heroku/actions@v2
+    - name: Heroku Docker Container Deploy
+      uses: lucassarcanjo/heroku-deploy@2.1.17
       with:
         email: ${{ secrets.HEROKU_EMAIL }}
         api_key: ${{ secrets.HEROKU_API_KEY }}
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./route-tracker-api
-        push: true
-        tags: routetracker-api/web
-    - name: Release image to Heroku
-      uses: heroku/actions@v2
-      with:
-        email: ${{ secrets.HEROKU_EMAIL }}
-        api_key: ${{ secrets.HEROKU_API_KEY }}
-        app: routetracker-api
-        command: release
-        attach-metrics: true
+        app_name: routetracker-api
+        dockerfile_path: ./route-tracker-api
