--- a/route-tracker-spa/package.json
+++ b/route-tracker-spa/package.json
@@ -25,7 +25,8 @@
     "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
-    "theme-change": "^2.3.0"
+    "theme-change": "^2.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
