--- a/route-tracker-spa/package.json
+++ b/route-tracker-spa/package.json
@@ -18,6 +18,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
     "luxon": "^3.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-daisyui": "^3.0.2",
     "react-datepicker": "^4.10.0",
